# rust-rpi-rgb-led-matrix

./: .gitmodules
.cargo/: config.toml
.github/workflows/: rust.yml
rpi-led-matrix/: Cargo.toml
rpi-led-matrix-sys/: CHANGELOG.md  Cargo.toml  build.rs
rpi-led-matrix-sys/src/: c_stubs.rs  lib.rs
rpi-led-matrix/examples/: arguments.rs  c-api-basic.rs  embedded-graphics-basic.rs
rpi-led-matrix/src/: args.rs  lib.rs  options.rs
